# Connect4-Ai-agent

./: .gitignore  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  EasyHeuristic.cpp  EasyHeuristic.h  HardHeuristic.cpp  HardHeuristic.h  Heuristic.h  HeuristicBase.cpp  HeuristicBase.h  HumanPlayer.h  MediumHeursitic.cpp  MediumHeursitic.h  Player.h  README.md  main.cpp
